--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,14 @@ layout: default
   {%- endif -%}
 
   <section>
+    <ul>
+      {% for post in site.posts %}
+        <li>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
+      {% endfor %}
+    </ul>
+    
     {{ content }}
   </section>
 
