--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,14 @@ layout: default
         </li>
       {% endfor %}
     </ul>
-    
+
+    <ul>
+      <li><a href="f">ad</a></li>
+      <li><a href="f">asefd</a></li>
+      <li><a href="f">asefd</a></li>
+      <li><a href="f">asefd</a></li>
+  </ul>
+
     {{ content }}
   </section>
 
