--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,19 +12,12 @@ layout: default
 
   <section>
     <ul>
-      {% for post in site.posts %}
+      {% for post in site.pages %}
         <li>
           <a href="{{ post.url }}">{{ post.title }}</a>
         </li>
       {% endfor %}
     </ul>
-
-    <ul>
-      <li><a href="f">ad</a></li>
-      <li><a href="f">asefd</a></li>
-      <li><a href="f">asefd</a></li>
-      <li><a href="f">asefd</a></li>
-  </ul>
 
     {{ content }}
   </section>
